--- a/app/src/main/res/layout/activity_twopane.xml
+++ b/app/src/main/res/layout/activity_twopane.xml
@@ -4,15 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:showDividers="middle">
-<FrameLayout
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:id="@+id/fragmentContainer"></FrameLayout>
 
-<FrameLayout
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="3"
-    android:id="@+id/detailFragmentContainer"></FrameLayout>
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"></FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/detailFragmentContainer"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3"></FrameLayout>
 </LinearLayout>
